--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
                     <a href="index.html">
                         <div class="col s12 menu_item">หน้าหลัก</div>
                     </a>
-                    <a href="#">
+                    <a href="about.html">
                         <div class="col s12 menu_item">เกี่ยวกับเรา</div>
                     </a>
-                    <a href="#">
+                    <a href="hightlight.html">
                         <div class="col s12 menu_item">ไฮไลท์</div>
                     </a>
                     <a href="product.html">
@@ -95,7 +95,7 @@
                     <a href="activity.html">
                         <div class="col s12 menu_item">กิจกรรม</div>
                     </a>
-                    <a href="#">
+                    <a href="่join.html">
                         <div class="col s12 menu_item">ร่วมเป็นส่วนหนึ่งของเรา</div>
                     </a>
                     <a href="contact.html">
