--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0" />
-    <title>Starter Template - Materialize</title>
+    <title>CapitalPlaza</title>
     <!-- CSS  -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
@@ -60,17 +60,35 @@
             <h2>Menu</h2>
         </div>
         <div class="container">
-            <div class="row removeMargin">
-                <a href="index.html"><div class="col s12 menu_item">หน้าหลัก</div></a>
-                <a href="#"><div class="col s12 menu_item">เกี่ยวกับเรา</div></a>
-                <a href="#"><div class="col s12 menu_item">ไฮไลท์</div></a>
-                <a href="product.html"><div class="col s12 menu_item">สินค้าและโปรโมชั่น</div></a>
-                <a href="category.html"><div class="col s12 menu_item">ร้านค้า</div></a>
-                <a href="news.html"><div class="col s12 menu_item">ข่าวสาร/ ประชาสัมพันธ์</div></a>
-                <a href="activity.html"><div class="col s12 menu_item">กิจกรรม</div></a>
-                <a href="#"><div class="col s12 menu_item">ร่วมเป็นส่วนหนึ่งของเรา</div></a>
-                <a href="contact.html"><div class="col s12 menu_item">ติดต่อเรา</div></a>
-            </div>
+           <div class="row removeMargin">
+                    <a href="index.html">
+                        <div class="col s12 menu_item">หน้าหลัก</div>
+                    </a>
+                    <a href="about.html">
+                        <div class="col s12 menu_item">เกี่ยวกับเรา</div>
+                    </a>
+                    <a href="hightlight.html">
+                        <div class="col s12 menu_item">ไฮไลท์</div>
+                    </a>
+                    <a href="product.html">
+                        <div class="col s12 menu_item">สินค้าและโปรโมชั่น</div>
+                    </a>
+                    <a href="category.html">
+                        <div class="col s12 menu_item">ร้านค้า</div>
+                    </a>
+                    <a href="news.html">
+                        <div class="col s12 menu_item">ข่าวสาร/ ประชาสัมพันธ์</div>
+                    </a>
+                    <a href="activity.html">
+                        <div class="col s12 menu_item">กิจกรรม</div>
+                    </a>
+                    <a href="่join.html">
+                        <div class="col s12 menu_item">ร่วมเป็นส่วนหนึ่งของเรา</div>
+                    </a>
+                    <a href="contact.html">
+                        <div class="col s12 menu_item">ติดต่อเรา</div>
+                    </a>
+                </div>
 
         </div>
     </section>
