--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
             <h2>Capital Plaza</h2>
         </div>
             <ul class="imgList removeMargin">
-         <a  class="zoom" href="assets/img/map_big.jpg" data-lightbox="image-1" data-title="Map"><li class="imgItemBanner removeMargin" style="background-image:url('assets/img/map.jpg'); height: 550px;">
+         <a  class="zoom" href="assets/img/map_big.jpg" data-lightbox="image-1" data-title="Map"><li class="imgItemBanner removeMargin" style="background-image:url('assets/img/re-MAP-Design.jpg'); height: 350px;">
             <div class="imgBox"></div>
         </li></a>
     </ul>
