--- a/activity.html
+++ b/activity.html
@@ -55,10 +55,7 @@
 
 
     <section class="menu_bar">
-        <div class="titleBar">
-
-            <h2>Menu</h2>
-        </div>
+       
         <div class="container">
             <div class="row removeMargin">
                     <a href="index.html">
@@ -82,7 +79,7 @@
                     <a href="activity.html">
                         <div class="col s12 menu_item">กิจกรรม</div>
                     </a>
-                    <a href="join.html">
+                   <a href="join.html">
                         <div class="col s12 menu_item">ร่วมเป็นส่วนหนึ่งของเรา</div>
                     </a>
                     <a href="contact.html">
@@ -93,22 +90,19 @@
     </section>
   </div>
 <div class="wrap_banner">
-    <div class="_banner">
+    <div class="_banner" style="background-image:url('assets/img/Accessories-B.jpg')">
         <h1 class="product_title">กิจกรรม</h1>
     </div>
 </div>
     <section>
-        <div class="titleBar">
-            <i class="material-icons">flash_on</i>
-            <h2>Lorem ipsum dolor sit amet</h2>
-        </div>
+        
         <div class="container itemSetting activity">
             <div class="row removeMargin">
                 <div class="col s12">
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/IMG_5631.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
@@ -124,7 +118,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/Accessories-B.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
@@ -140,7 +134,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/Accessories-A.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
@@ -156,7 +150,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/IMG_5631.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
@@ -171,7 +165,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/mini_banner2.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
