--- a/contact.html
+++ b/contact.html
@@ -55,10 +55,7 @@
 
 
     <section class="menu_bar">
-        <div class="titleBar">
-
-            <h2>Menu</h2>
-        </div>
+        
         <div class="container">
            <div class="row removeMargin">
                     <a href="index.html">
@@ -82,7 +79,7 @@
                     <a href="activity.html">
                         <div class="col s12 menu_item">กิจกรรม</div>
                     </a>
-                    <a href="่join.html">
+                   <a href="join.html">
                         <div class="col s12 menu_item">ร่วมเป็นส่วนหนึ่งของเรา</div>
                     </a>
                     <a href="contact.html">
@@ -93,7 +90,7 @@
     </section>
   </div>
 <div class="wrap_banner">
-    <div class="_banner">
+    <div class="_banner" style="background-image:url('assets/img/background1.jpg')">
         <h1 class="product_title">ติดต่อเรา</h1>
     </div>
 </div>
