--- a/news.html
+++ b/news.html
@@ -55,10 +55,7 @@
 
 
     <section class="menu_bar">
-        <div class="titleBar">
-
-            <h2>Menu</h2>
-        </div>
+       
         <div class="container">
            <div class="row removeMargin">
                     <a href="index.html">
@@ -82,7 +79,7 @@
                     <a href="activity.html">
                         <div class="col s12 menu_item">กิจกรรม</div>
                     </a>
-                    <a href="่join.html">
+                   <a href="join.html">
                         <div class="col s12 menu_item">ร่วมเป็นส่วนหนึ่งของเรา</div>
                     </a>
                     <a href="contact.html">
@@ -94,7 +91,7 @@
     </section>
   </div>
 <div class="wrap_banner">
-    <div class="_banner">
+    <div class="_banner" style="background-image:url('assets/img/Asset 1-80.jpg')">
         <h1 class="product_title">ข่าวสาร<br/>ประชาสัมพันธ์</h1>
     </div>
 </div>
@@ -104,24 +101,24 @@
         <div class="container news news_page">
           <div class="row">
             <div class="col s12">
-              <div class="boxImg"></div>
-              <h4 class="newsTitle">Lorem</h4>
+              <div class="boxImg"  style="background-image:url('assets/img/IMG_5631.jpg')"></div>
+              <h4 class="newsTitle">ซัพพลายสไลด์ช็อปเฟอร์รี่เวิร์กช็อป</h4>
               <hr class="line"/>
               <p class="newsDetail">วันเวย์ไฟแนนซ์ออร์แกนิค โง่เขลาคอมเพล็กซ์สหัสวรรษ เช็งเม้งครัวซองต์ รุสโซสป็อตเทอร์โบ ซัพพลายสไลด์ช็อปเฟอร์รี่เวิร์กช็อป ภูมิทัศน์โชห่วยใช้งานวันเวย์ไฟแนนซ์ออร์แกนิค โง่เขลาคอมเพล็กซ์สหัสวรรษ เช็งเม้งครัวซองต์ รุสโซสป็อตเทอร์โบ ซัพพลายสไลด์ช็อปเฟอร์รี่เวิร์กช็อป ภูมิทัศน์โชห่วยใช้งาน  </p>
               <hr class="line line_down"/>
             </div>
             <div class="col s12">
-              <div class="boxImg"></div>
-              <h4 class="newsTitle">Lorem</h4>
+              <div class="boxImg"  style="background-image:url('assets/img/IMG_5607.jpg')"></div>
+              <h4 class="newsTitle">ภูมิทัศน์โชห่วยใช้งาน</h4>
               <hr class="line"/>
-              <p class="newsDetail">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+              <p class="newsDetail">เช็งเม้งครัวซองต์ รุสโซสป็อตเทอร์โบ ซัพพลายสไลด์ช็อปเฟอร์รี่เวิร์กช็อป ภูมิทัศน์โชห่วยใช้งานวันเวย์ไฟแนนซ์ออร์แกนิค โง่เขลาคอมเพล็กซ์สหัสวรรษ เช็งเม้งครัวซองต์ รุสโซสป็อตเทอร์โบ ซัพพลายสไลด์ช็อปเฟอร์รี่เวิร์กช็อป ภูมิทัศน์โชห่วยใช้งาน.</p>
               <hr class="line line_down"/>
             </div>
             <div class="col s12">
-              <div class="boxImg"></div>
-              <h4 class="newsTitle">Lorem</h4>
+              <div class="boxImg"  style="background-image:url('assets/img/IMG_5581.jpg')"></div>
+              <h4 class="newsTitle">รุสโซสป็อตเทอร์โบ</h4>
               <hr class="line"/>
-              <p class="newsDetail">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit.</p>
+              <p class="newsDetail">ภูมิทัศน์โชห่วยใช้งานวันเวย์ไฟแนนซ์ออร์แกนิค เช็งเม้งครัวซองต์ รุสโซสป็อตเทอร์โบ ซัพพลายสไลด์ช็อปเฟอร์รี่เวิร์กช็อป ภูมิทัศน์โชห่วยใช้งานวันเวย์ไฟแนนซ์ออร์แกนิค โง่เขลาคอมเพล็กซ์สหัสวรรษ เช็งเม้งครัวซองต์ รุสโซสป็อตเทอร์โบ ซัพพลายสไลด์ช็อปเฟอร์รี่เวิร์กช็อป ภูมิทัศน์โชห่วยใช้งาน</p>
               <hr class="line line_down"/>
             </div>
           </div>
