--- a/category.html
+++ b/category.html
@@ -55,10 +55,7 @@
 
 
     <section class="menu_bar">
-        <div class="titleBar">
-
-            <h2>Menu</h2>
-        </div>
+      
         <div class="container">
      <div class="row removeMargin">
                     <a href="index.html">
@@ -82,7 +79,7 @@
                     <a href="activity.html">
                         <div class="col s12 menu_item">กิจกรรม</div>
                     </a>
-                    <a href="่join.html">
+                   <a href="join.html">
                         <div class="col s12 menu_item">ร่วมเป็นส่วนหนึ่งของเรา</div>
                     </a>
                     <a href="contact.html">
@@ -94,7 +91,7 @@
     </section>
   </div>
 <div class="wrap_banner">
-    <div class="_banner">
+    <div class="_banner"  style="background-image:url('assets/img/final_cb_0086.0.jpg')">
         <h1 class="product_title">ร้านค้า</h1>
     </div>
 </div>
@@ -106,7 +103,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/IMG_5631.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
@@ -122,7 +119,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/mini_banner2.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
@@ -138,7 +135,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/Accessories-A.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
@@ -154,7 +151,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/Accessories-B.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
@@ -169,7 +166,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/IMG_5631.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
