--- a/product.html
+++ b/product.html
@@ -55,10 +55,7 @@
 
 
     <section class="menu_bar">
-        <div class="titleBar">
-
-            <h2>Menu</h2>
-        </div>
+       
         <div class="container">
             <div class="row removeMargin">
                     <a href="index.html">
@@ -82,7 +79,7 @@
                     <a href="activity.html">
                         <div class="col s12 menu_item">กิจกรรม</div>
                     </a>
-                    <a href="่join.html">
+                    <a href="join.html">
                         <div class="col s12 menu_item">ร่วมเป็นส่วนหนึ่งของเรา</div>
                     </a>
                     <a href="contact.html">
@@ -95,7 +92,7 @@
   </div>
 
 <div class="wrap_banner">
-    <div class="_banner">
+    <div class="_banner" style="background-image:url('assets/img/shutterstock_121286026.jpg')">
         <h1 class="product_title">สินค้าและ<br/>โปรโมชั่น</h1>
     </div>
 </div>
@@ -107,7 +104,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/IMG_5631.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
@@ -123,7 +120,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/IMG_5671.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
@@ -139,7 +136,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/IMG_5682.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
@@ -155,7 +152,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/Accessories-A.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
@@ -170,7 +167,7 @@
                     <div class="container itemSetting">
                         <div class="row wrapItemSetting">
                             <div class="col s4 itemList">
-                                <div class="thumbItemImg"></div>
+                                <div class="thumbItemImg"  style="background-image:url('assets/img/Accessories-B.jpg')"></div>
                             </div>
                             <div class="col s8 itemDetail">
                                 <h5>เคสมือถือ sPhone case</h5>
